<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/col"
    app:cardCornerRadius="0dp"
    app:cardElevation="0dp"
    app:strokeColor="#2A2A2A"
    app:strokeWidth="1.5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/editDeleteL"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descrTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:text="@string/description"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dateTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:text="@string/date"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editDeleteL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/editImg"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginVertical="4dp"
                android:src="@android:drawable/ic_menu_edit" />

            <ImageView
                android:id="@+id/deleteImg"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginVertical="4dp"
                android:src="@android:drawable/ic_menu_delete" />
        </LinearLayout>
    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>
