<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/col"
    tools:context=".MainActivity">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcomeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="31dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="192dp"
                android:text="@string/taskwizz"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/todayTxt"
                android:layout_width="377dp"
                android:layout_height="26dp"
                android:layout_below="@id/welcomeTxt"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="34dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="0dp"
                android:text="@string/make_your_everyday_lifestyle_easier"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/edSearchL"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/sortImg"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/ic_sort" />

                <ImageView
                    android:id="@+id/listOrGridImg"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/ic_view_list"
                    app:tint="@color/black" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edSearchL"
                style="@style/SearchInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/todayTxt"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="8dp"
                app:errorEnabled="false"
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/ic_search">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edSearch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:hint="@string/search"
                    android:imeOptions="actionSearch"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/taskRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edSearchL"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="27dp"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:overScrollMode="never"
                android:paddingBottom="100dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addTaskFABtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_add_circle"
        app:iconSize="25dp"
        app:iconTint="@color/white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>